--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/home/parth/LP5",
-      "program": "/home/parth/LP5/build/Debug/outDebug",
+      "cwd": "/home/parth/LP5/HPC",
+      "program": "/home/parth/LP5/HPC/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
